--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,18 +11,18 @@ spring:
 server:
   port: 8877
 
-
 oracleUrl: "jdbc:oracle:thin:@192.168.1.100:1521:orcl" #Oracle连接名
+#oracleUrl: "jdbc:oracle:thin:@192:168:26:31:1521:orcl" #Oracle连接名
 oracleUsername: "dqzx"  #用户名
 oraclePassword: "dqzx"  #密码
 
 folderPath: "D:\\data" #文件夹路径
-bridgeId: "DD5B0E114FF5454D8C1D47A221406839" #桥梁ID
+bridgeId: "0781216DF69E4055A51B48FA480E04AA" #桥梁ID
 
 #所有CAN设备的Id号以及位置数据，英文逗号分隔
-canIds: "0x0581,0x0582,0x0583,0x0584,0x0585,0x0586,0x0587,0x0588,0x0589" #canId
-canDistance: "0,8.95,17.9,26.85,35.8,44.75,53.7,62.65,71.6"  #测点距离
-canNumber: 9  #can数量
+canIds: "0x0581,0x0582,0x0583,0x0584,0x0585,0x0586,0x0587,0x0588" #canId
+canDistance: "0,11.43,22.86,34.29,45.72,57.15,68.58,80"  #测点距离
+canNumber: 8  #can数量
 
 fPass: 1 #通带截止频率
 fStop: 2 #阻带截止频率
